--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <app ng-app="video-player"></app>
   <script src="src/data/exampleVideoData.js"></script>
   <script src="src/index.js"></script>
+  <script src="src/config/youTube.js"></script>
   <script src="src/services/youTube.js"></script>
   <script src="src/components/app.js"></script>
   <script src="src/components/videoPlayer.js"></script>
